# LLM_Agent

./: .gitignore  config.py  data_loader.py  dataset_comparison_runner.py  dataset_runner.py  debug_probe.py  download_models.py  evaluate.py  evaluation_dataset.xlsx  evaluation_dataset_comparison(sample).xlsx  evaluation_dataset_comparison.xlsx  evaluation_test.py  explain.py  faiss.index  indexing.py  judge.py  llm.py  llm_as_a_judge.py  llm_as_a_judge_explain(Re).py  llm_as_a_judge_explain.py  metrics.py  pyproject.toml  ragas_judge.py  retriever.py  step_test.py  store.pkl
reports/: judge_explain_20251104_224533.json  judge_explain_20251104_225253.json  judge_explain_20251108_140747.json  judge_explain_20251108_142843.json  judge_explain_20251108_145054.json  judge_explain_20251108_150211.json  judge_explain_20251108_150401.json  judge_explain_20251108_150553.json  judge_explain_20251108_151914.json  judge_explain_20251108_152100.json  judge_explain_20251108_152229.json  judge_explain_20251108_153428.json  judge_explain_20251108_153618.json  judge_explain_20251108_153737.json  judge_explain_20251108_154020.json  judge_explain_20251108_154155.json  judge_explain_20251108_154259.json
reports/comparison/: summary_20251108_155628.csv  summary_20251108_155628.xlsx  summary_20251108_161313.csv  summary_20251108_161313.xlsx  summary_20251109_142301.csv  summary_20251109_142301.xlsx  summary_20251109_144707.xlsx  summary_20251109_145918.csv  summary_20251109_145918.xlsx  summary_20251109_151526.csv  summary_20251109_151526.xlsx
reports/dataset/: summary_20251108_145147.csv  (+9 more)
